fixed ship placement box sizing and button always stretching, added play again button logic

--- a/style.css
+++ b/style.css
@@ -8,23 +8,29 @@ html{
     height:100vh;
 }
 
-body,.gameboards{
-    /* height: 100%; */
+body{
+    height: 100%;
 }
 
 
 .gameboards{
     display:flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: flex-start;
 }
 
 .board-holder{
-    /* display: flex; */
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+    /* margin: 0 auto; */
+    width: 50%;
 }
 
 .board{
     display:flex;
+    justify-content: center;
 }
 
 .board-title{
@@ -79,18 +85,27 @@ body,.gameboards{
 
 
 .winner-message-container{
+    font-size: 3rem;
     display: flex;
     flex-flow: column nowrap;
     justify-content:center;
     align-items: center;
+    height: 50%;
 }
 
 .ship-holder{
     border:1px solid black;
     display:flex;
-    flex-flow: row wrap;
-    width:80%;
+    flex-flow: column nowrap;
+    /* justify-content: center; */
+    width:60%;
+    /* margin: 0 auto; */
 
+}
+
+.player-ships{
+    display: flex;
+    flex-flow: row wrap;
 }
 
 .ship{
@@ -103,57 +118,27 @@ body,.gameboards{
 }
 
 .border-start{
-    /* width: 0;
-    height: 0;
-    border-left: 17px solid transparent;
-    border-right: 17px solid transparent;
-    border-bottom: 50px solid aqua; */
-
     padding: 1rem;
-        border: 1px solid black;
-        background-color: aqua;
+    border: 1px solid black;
+    background-color: aqua;
 }
 
 
 .shark-img{
-    background-image: url(./imgs/ali-abdul-rahman-XNGrhZwyKVw-unsplash.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-color:yellow;
 }
-.shark-rotate{
-    background-image: url(./imgs/ali-abdul-rahman-XNGrhZwyKVw-unsplash.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
-    /* transform: rotate(90deg); */
-}
+
 .border{
-    /* height: 10px;
-        width: 10px; */
-        padding: 1.20rem;
-        border:1px solid black;
-        /* background-color: aqua;
-        background-image: url(./imgs/ali-abdul-rahman-XNGrhZwyKVw-unsplash.jpg); */
-        
+    padding: 1.20rem;
+    border:1px solid black;
 }
 
-.border-end{
-    /* transform: translateY(500px); */
-    /* width: 0;
-        height: 0;
-        border-top: 50px solid aqua;
-        border-left: 50px solid transparent;
-        transform: rotate(-45deg); */
-
-        padding: 1rem;
-            border: 1px solid black;
-            background-color: aqua;
+.center-button{
+    text-align: center;
 }
-
-.ship-rotate{
+.ship-rotate > *{
     display:flex;
-    /* transform: rotate(90deg); */
+flex-flow: row nowrap;
 }
 
 
